# server/src/main/kotlin/com/doublefree/caff/ParticipantRepository.kt
@@ -1,0 +1,8 @@
+package com.doublefree.caff
+
+import org.springframework.data.jpa.repository.JpaRepository
+
+interface ParticipantRepository : JpaRepository<Participant, Long> {
+    fun findByCaffId(caffId: Long): List<Participant>
+    fun deleteAllByCaffId(caffId: Long)
+}
